crates/tui/snapshots/shared/config/provider/narrow_provider_scrolls_to_last_test_action.snap
---
source: crates/tui/src/config/provider_tests.rs
expression: text(&buffer)
---
  API key
  ╭──────────────────────────────╮
  │ API key (optional)           │
  ╰──────────────────────────────╯
  Model ID
  ╭──────────────────────────────╮
  │ private-model-alias          │
  ╰──────────────────────────────╯
  API type        OpenAI Responses
  Model context window        272k
● Test
