crates/tui/snapshots/shared/config/provider/running_provider_shows_pending_feedback.snap
---
source: crates/tui/src/config/provider_tests.rs
expression: "text(&render(&panel, 80, 25, start))"
---
  Provider name
  ╭──────────────────────────────────────────────────────────────────────────╮
  │ My gateway                                                               │
  ╰──────────────────────────────────────────────────────────────────────────╯
  Base URL
  ╭──────────────────────────────────────────────────────────────────────────╮
  │ https://example.test/gateway/v1                                          │
  ╰──────────────────────────────────────────────────────────────────────────╯
  API key
  ╭──────────────────────────────────────────────────────────────────────────╮
  │ API key (optional)                                                       │
  ╰──────────────────────────────────────────────────────────────────────────╯
  Model ID
  ╭──────────────────────────────────────────────────────────────────────────╮
  │ private-model-alias                                                      │
  ╰──────────────────────────────────────────────────────────────────────────╯
  API type                                                    OpenAI Responses
  Model context window                                                    272k
● Test
  Testing…
